--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -13,7 +13,7 @@ repos:
     rev: 23.12.1
     hooks:
     -   id: black
-        language_version: python3.11
+        language_version: python3.12
 
 -   repo: https://github.com/pycqa/isort
     rev: 5.13.2
@@ -31,4 +31,4 @@ repos:
     rev: v1.8.0
     hooks:
     -   id: mypy
-        additional_dependencies: [types-all] 
+        args: [--ignore-missing-imports]
