--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,19 @@ description = "A lightweight, authentic 8-bit and 16-bit style game development 
 authors = ["Ahmed Mohamed <ahmedmohamed200354@gmai.com>"]
 readme = "README.md"
 packages = [{include = "src"}]
+license = "MIT"
+homepage = "https://github.com/ahmed5145/retro_game_engine"
+repository = "https://github.com/ahmed5145/retro_game_engine"
+keywords = ["game", "engine", "retro", "pygame", "2d"]
+classifiers = [
+    "Development Status :: 3 - Alpha",
+    "Intended Audience :: Developers",
+    "License :: OSI Approved :: MIT License",
+    "Programming Language :: Python :: 3.11",
+    "Programming Language :: Python :: 3.12",
+    "Topic :: Games/Entertainment",
+    "Topic :: Software Development :: Libraries :: pygame"
+]
 
 [tool.poetry.dependencies]
 python = "^3.11"
@@ -37,4 +50,4 @@ disallow_untyped_defs = true
 [tool.pytest.ini_options]
 testpaths = ["tests"]
 python_files = ["test_*.py"]
-addopts = "-v --cov=src" 
+addopts = "-v --cov=src"
