--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,17 +20,18 @@ classifiers = [
 ]
 
 [tool.poetry.dependencies]
-python = "^3.11"
-pygame = "^2.5.0"
-numpy = "^1.24.0"
+python = "^3.12"
+pygame = "^2.5.2"
+numpy = "^1.26.3"
+scipy = "^1.12.0"
 
 [tool.poetry.group.dev.dependencies]
-pytest = "^7.4.0"
-pytest-cov = "^4.1.0"
-black = "^23.7.0"
-mypy = "^1.5.0"
-pylint = "^2.17.5"
-pre-commit = "^3.3.3"
+pytest = "^7.4.4"
+black = "^24.1.1"
+isort = "^5.13.2"
+flake8 = "^7.0.0"
+mypy = "^1.8.0"
+pre-commit = "^3.6.0"
 
 [build-system]
 requires = ["poetry-core"]
@@ -38,14 +39,27 @@ build-backend = "poetry.core.masonry.api"
 
 [tool.black]
 line-length = 88
-target-version = ['py311']
+target-version = ['py312']
 include = '\.pyi?$'
 
+[tool.isort]
+profile = "black"
+multi_line_output = 3
+line_length = 88
+
 [tool.mypy]
-python_version = "3.11"
+python_version = "3.12"
 warn_return_any = true
 warn_unused_configs = true
 disallow_untyped_defs = true
+disallow_incomplete_defs = true
+check_untyped_defs = true
+disallow_untyped_decorators = true
+no_implicit_optional = true
+warn_redundant_casts = true
+warn_unused_ignores = true
+warn_no_return = true
+warn_unreachable = true
 
 [tool.pytest.ini_options]
 testpaths = ["tests"]
