--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,12 +9,9 @@ on:
 jobs:
   test:
     runs-on: ubuntu-latest
-    permissions:
-      contents: read
     strategy:
       matrix:
         python-version: ["3.11", "3.12"]
-      fail-fast: false  # Continue with other versions if one fails
 
     steps:
     - uses: actions/checkout@v4
@@ -31,22 +28,22 @@ jobs:
         virtualenvs-create: true
         virtualenvs-in-project: true
 
-    - name: Install dependencies
+    - name: Install SDL dependencies
       run: |
         sudo apt-get update
-        sudo apt-get install -y python3-pygame
-        poetry install --no-interaction
+        sudo apt-get install -y python3-dev libsdl2-dev libsdl2-image-dev libsdl2-mixer-dev libsdl2-ttf-dev
 
-    - name: Run tests with coverage
-      run: |
-        poetry run pytest --cov=src --cov-report=xml
+    - name: Install dependencies
+      run: poetry install
+
+    - name: Run tests
+      run: poetry run pytest tests/ --cov=src --cov-report=xml
 
     - name: Upload coverage to Codecov
       uses: codecov/codecov-action@v3
-      continue-on-error: true
       with:
-        token: ${{ secrets.CODECOV_TOKEN }}
         file: ./coverage.xml
+        fail_ci_if_error: true
 
     - name: Type checking
       run: poetry run mypy src tests
