--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,6 +27,7 @@ scipy = "^1.12.0"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.4.4"
+pytest-cov = "^4.1.0"
 black = "^24.1.1"
 isort = "^5.13.2"
 flake8 = "^7.0.0"
