--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -33,6 +33,9 @@ jobs:
         sudo apt-get update
         sudo apt-get install -y python3-dev libsdl2-dev libsdl2-image-dev libsdl2-mixer-dev libsdl2-ttf-dev
 
+    - name: Update Poetry lock file
+      run: poetry lock --no-update
+
     - name: Install dependencies
       run: poetry install
 
