--- a/pyproject.toml
+++ b/pyproject.toml
@@ -47,6 +47,12 @@ include = '\.pyi?$'
 profile = "black"
 multi_line_output = 3
 line_length = 88
+include_trailing_comma = true
+force_grid_wrap = 0
+use_parentheses = true
+ensure_newline_before_comments = true
+skip = ["examples"]
+skip_glob = ["examples/*"]
 
 [tool.mypy]
 python_version = "3.12"
@@ -59,10 +65,55 @@ disallow_untyped_decorators = true
 no_implicit_optional = true
 warn_redundant_casts = true
 warn_unused_ignores = true
-warn_no_return = true
-warn_unreachable = true
+warn_no_return = false
+warn_unreachable = false
+exclude = [
+    'examples/.*',  # Exclude all example files
+]
+explicit_package_bases = true  # Fix module mapping issues
+namespace_packages = true  # Support namespace packages
+
+# Allow missing imports for certain modules
+[[tool.mypy.overrides]]
+module = ["scipy.*", "scipy", "pygame.*", "pygame"]
+ignore_missing_imports = true
+
+# More lenient settings for tests
+[[tool.mypy.overrides]]
+module = "tests.*"
+disable_error_code = ["unreachable", "misc"]
+warn_unreachable = false
+disallow_untyped_decorators = false
 
 [tool.pytest.ini_options]
 testpaths = ["tests"]
 python_files = ["test_*.py"]
 addopts = "-v --cov=src"
+
+[tool.flake8]
+max-line-length = 88  # Match black's line length
+extend-ignore = [
+    "E501",  # Line too long (handled by black)
+    "D100",  # Missing docstring in public module
+    "D104",  # Missing docstring in public package
+    "D105",  # Missing docstring in magic method
+    "D107",  # Missing docstring in __init__
+    "D200",  # One-line docstring should fit on one line with quotes
+    "D202",  # No blank lines allowed after function docstring
+    "D401",  # First line should be in imperative mood
+    "D402",  # First line should not be the function's signature
+    "F401",  # Imported but unused (let pylint handle this)
+    "F811",  # Redefinition of unused name (let pylint handle this)
+    "F841",  # Local variable name is assigned to but never used (let pylint handle this)
+]
+exclude = [
+    "examples/*",
+    ".git",
+    "__pycache__",
+    "build",
+    "dist"
+]
+per-file-ignores = [
+    "__init__.py:F401",  # Ignore unused imports in __init__.py files
+    "tests/*:D,F841",    # Ignore docstring issues and unused variables in tests
+]
