--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,11 +28,14 @@ jobs:
 
     - name: Install Poetry
       run: |
-        curl -sSL https://install.python-poetry.org | python3 -
+        python -m pip install --upgrade pip
+        python -m pip install pipx
+        pipx ensurepath
+        pipx install poetry==1.7.1
 
     - name: Configure Poetry
       run: |
-        poetry config virtualenvs.create false
+        poetry config virtualenvs.in-project true
 
     - name: Install dependencies
       run: |
@@ -66,11 +69,14 @@ jobs:
 
     - name: Install Poetry
       run: |
-        curl -sSL https://install.python-poetry.org | python3 -
+        python -m pip install --upgrade pip
+        python -m pip install pipx
+        pipx ensurepath
+        pipx install poetry==1.7.1
 
     - name: Configure Poetry
       run: |
-        poetry config virtualenvs.create false
+        poetry config virtualenvs.in-project true
 
     - name: Install dependencies
       run: |
