--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,7 +27,7 @@ classifiers = [
 [tool.poetry.dependencies]
 python = "^3.9"
 pygame = "^2.5.2"
-numpy = "^1.26.0"
+numpy = "1.26.3"
 pillow = "^10.0.0"
 
 [tool.poetry.group.dev.dependencies]
