--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,39 +1,53 @@
 name: Release
 
 on:
-  release:
-    types: [created]
+  push:
+    tags:
+      - 'v*'
 
 jobs:
-  deploy:
+  release:
     runs-on: ubuntu-latest
+    permissions:
+      contents: write
     steps:
     - uses: actions/checkout@v3
+      with:
+        fetch-depth: 0
 
     - name: Set up Python
       uses: actions/setup-python@v4
       with:
-        python-version: '3.x'
+        python-version: "3.12"
 
     - name: Install Poetry
       run: |
-        curl -sSL https://install.python-poetry.org | python3 -
+        python -m pip install --upgrade pip
+        python -m pip install pipx
+        pipx ensurepath
+        pipx install poetry==1.7.1
 
     - name: Configure Poetry
       run: |
-        poetry config virtualenvs.create false
+        poetry config virtualenvs.in-project true
 
     - name: Install dependencies
       run: |
         poetry install
 
-    - name: Run tests
-      run: |
-        poetry run pytest
-
     - name: Build package
       run: |
         poetry build
+
+    - name: Create Release
+      uses: softprops/action-gh-release@v1
+      with:
+        files: |
+          dist/*.whl
+          dist/*.tar.gz
+        draft: false
+        prerelease: false
+        generate_release_notes: true
 
     - name: Publish to PyPI
       env:
