--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -3,3 +3,7 @@ mkdocs-material==9.5.3
 mkdocstrings==0.24.0
 mkdocstrings-python==1.7.5
 pymdown-extensions==10.7
+mkdocs-autorefs==0.5.0
+mkdocs-gen-files==0.5.0
+mkdocs-literate-nav==0.6.1
+mkdocs-section-index==0.3.8
